<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  tools:context=".address.form.FormAddressActivity">

  <include
    android:id="@+id/toolbar"
    layout="@layout/secondary_toolbar"/>

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/text_register_caption"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginStart="20dp"
    android:fontFamily="monospace"
    android:text="@string/form_edit_address"
    android:textColor="@android:color/black"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar"/>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputName"
    style="@style/UikitTextInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:hint="@string/name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_register_caption">

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/editName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/black90"
      android:singleLine="true"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputAddress"
    style="@style/UikitTextInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:hint="@string/address"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputName">

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/editAddress"
      style="@style/UikitEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/black90"
      android:inputType="text"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputDescription"
    style="@style/UikitTextInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:hint="@string/description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputAddress">

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/editDescription"
      style="@style/UikitEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/black90"
      android:inputType="text"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputCoordinate"
    style="@style/UikitTextInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:hint="@string/coordinate"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputDescription">

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/editCoordinate"
      style="@style/UikitEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:focusable="false"
      android:textColor="@color/black90"
      android:focusableInTouchMode="false"
      android:inputType="text"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/buttonImage"
    style="@style/UikitSecondaryButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:text="@string/add_photo"
    app:layout_constraintTop_toBottomOf="@id/textInputCoordinate"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/imagePhoto"
    android:layout_width="108dp"
    android:layout_height="108dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/buttonImage"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/buttonSave"
    style="@style/UikitPrimaryButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:text="@string/save_address"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>